--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_chile_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:fullBackupContent="@xml/">
+        android:theme="@style/AppTheme">
 
-        <!-- FCM disable auto init-->
+        <!-- FCM disable auto init -->
         <meta-data
             android:name="firebase_messaging_auto_init_enabled"
             android:value="false" />
@@ -44,6 +43,7 @@
             </intent-filter>
         </service>
 
+        <activity android:name=".QuakeDetailsActivity"></activity>
     </application>
 
 </manifest>
