--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,15 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".QuakeDetailsActivity"></activity>
+        <!-- Activity detalle -->
+        <activity
+            android:name=".QuakeDetailsActivity"
+            android:parentActivityName=".MainActivity">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
     </application>
 
 </manifest>
