Se agrega server error connection e invitaciones y links dinamicos con firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="cl.figonzal.lastquakechile"
     android:installLocation="auto">
 
@@ -34,6 +35,8 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
+            <tools:validation testUrl="https://lastquakechile-server.herokuapp.com/" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -67,6 +70,16 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="https"
+                    android:host="lastquakechile-server.herokuapp.com" />
+            </intent-filter>
         </activity>
     </application>
 
