--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher_chile"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_chile_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:fullBackupContent="@xml/backup_descriptor">
+        android:theme="@style/AppTheme">
 
         <!-- FCM disable auto init -->
         <meta-data
@@ -28,9 +28,11 @@
             android:resource="@drawable/ic_lastquakechile" />
 
         <!-- Color Notificaciones -->
-        <!--<meta-data
+        <!--
+            <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
-            android:resource="@color/colorPrimary" />-->
+            android:resource="@color/colorPrimary" />
+        -->
 
         <activity
             android:name=".MainActivity"
@@ -62,7 +64,7 @@
                 android:value=".MainActivity" />
         </activity>
 
-        <!-- Activity Contact-->
+        <!-- Activity Contact -->
         <activity
             android:name=".ContactActivity"
             android:parentActivityName=".MainActivity"
@@ -70,15 +72,19 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
-            <intent-filter android:autoVerify="true">
+        </activity>
+        <activity
+            android:name=".InvitationActivity"
+            android:label="@string/title_activity_invitation">
+            <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:scheme="https"
-                    android:host="lastquakechile-server.herokuapp.com" />
+                    android:host="lastquakechile-server.herokuapp.com"
+                    android:scheme="https" />
             </intent-filter>
         </activity>
     </application>
