--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,10 @@
                     android:scheme="https" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="firebase_performance_collection_deactivated"
+            android:value="true" />
     </application>
 
 </manifest>
