Animacion de ondas en invitation activity y template html para la invitacion

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,7 @@
         </activity>
         <activity
             android:name=".InvitationActivity"
-            android:label="@string/title_activity_invitation">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
