Cambio de nombre a welcomeactivity, checkeo de first run, codigo 1 de version

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,7 @@
                 android:value=".MainActivity" />
         </activity>
         <activity
-            android:name=".InvitationActivity"
+            android:name=".WelcomeActivity"
             android:screenOrientation="portrait">
 
             <intent-filter android:autoVerify="true">
