--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,48 +18,38 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_api_key" />
-
-        <!-- FIREBASE -->
+            android:value="@string/google_api_key" /> <!-- FIREBASE -->
         <!-- FCM disable auto init -->
         <meta-data
             android:name="firebase_messaging_auto_init_enabled"
-            android:value="false" />
-
-        <!-- Icono de notificaciones por defecto usado FCM console en background -->
+            android:value="false" /> <!-- Icono de notificaciones por defecto usado FCM console en background -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_lastquakechile_1200" />
-
         <meta-data
             android:name="firebase_performance_collection_deactivated"
-            android:value="true" />
-
-        <!-- Llamada a servicio de mensajeria -->
+            android:value="true" /> <!-- Llamada a servicio de mensajeria -->
         <service
             android:name=".services.MyFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
-        </service>
-
-        <!-- FACEBOOK-->
+        </service> <!-- FACEBOOK -->
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
         <provider
-            android:authorities="com.facebook.app.FacebookContentProvider1263072277140754"
             android:name="com.facebook.FacebookContentProvider"
-            android:exported="true" />
-
-        <!-- Provider usado para buscar rutas de imagenes y pasarlas a Uri's-->
+            android:authorities="com.facebook.app.FacebookContentProvider1263072277140754"
+            android:exported="true" /> <!-- Provider usado para buscar rutas de imagenes y pasarlas a Uri's -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="cl.figonzal.lastquakechile.fileprovider"
@@ -73,7 +63,6 @@
         <activity
             android:name=".views.MainActivity"
             android:screenOrientation="portrait">
-
             <tools:validation testUrl="https://figonzal.cl/lastquakechile/" />
             <tools:validation testUrl="https://figonzal.cl/lastquakechile" />
 
@@ -83,10 +72,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <!-- Activity detalle -->
         <activity
             android:name=".views.QuakeDetailsActivity"
+            android:parentActivityName=".views.MainActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.MainActivity" />
+        </activity>
+
+        <activity
+            android:name=".SettingsActivity"
             android:parentActivityName=".views.MainActivity"
             android:screenOrientation="portrait">
             <meta-data
@@ -106,7 +103,6 @@
         <activity
             android:name=".views.WelcomeActivity"
             android:screenOrientation="portrait">
-
             <tools:validation testUrl="https://figonzal.cl/lastquakechile/" />
             <tools:validation testUrl="https://figonzal.cl/lastquakechile" />
             <tools:validation testUrl="https://lastquakechile-server-dev.herokuapp.com/lastquakechile/" />
@@ -119,9 +115,9 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:scheme="https"
                     android:host="lastquakechile-server-dev.herokuapp.com"
-                    android:pathPattern="/lastquakechile.*" />
+                    android:pathPattern="/lastquakechile.*"
+                    android:scheme="https" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -130,9 +126,9 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:scheme="https"
                     android:host="figonzal.cl"
-                    android:pathPattern="/lastquakechile.*" />
+                    android:pathPattern="/lastquakechile.*"
+                    android:scheme="https" />
             </intent-filter>
         </activity>
     </application>
