--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
 
     //Googleplay
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.android.gms:play-services-ads:17.2.0'
 
     //Facebook
     implementation 'com.facebook.android:facebook-android-sdk:4.40.0'
