--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ android:
     - extra-android-m2repository
 before_install:
   - openssl aes-256-cbc -K $encrypted_c9436dc7b87c_key -iv $encrypted_c9436dc7b87c_iv -in secrets.tar.gz.enc -out secrets.tar.gz -d
-  - tar xvf secrets.tar.xz
+  - tar xzvf secrets.tar.gz
   - mv google-services.json app/
   - chmod +x gradlew
   - export TZ=America/Santiago
