--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ before_install:
   - export TZ=America/Santiago
 script:
   - ./gradlew clean
-  - ./gradlew assembleDebug
+  - ./gradlew assemble
   - ./gradlew test
