--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ android:
     - platform-tools
     - build-tools-28.0.3
     - android-28
-    - extra-google-google_play_services
-    - extra-google-m2repository
+    - extra-google-google_play_services  - extra-google-m2repository
     - extra-android-m2repository
 before_install:
   - openssl aes-256-cbc -K $encrypted_c9436dc7b87c_key -iv $encrypted_c9436dc7b87c_iv -in secrets.tar.gz.enc -out secrets.tar.gz -d
@@ -16,6 +15,6 @@ before_install:
   - chmod +x gradlew
   - export TZ=America/Santiago
 script:
-  - ./gradlew clean
-  - ./gradlew assemble
-  - ./gradlew test
+  - "./gradlew clean"
+  - "./gradlew assemble"
+  - "./gradlew test"
