--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ android:
 before_install:
   - openssl aes-256-cbc -K $encrypted_c9436dc7b87c_key -iv $encrypted_c9436dc7b87c_iv -in secrets.tar.gz.enc -out secrets.tar.gz -d
   - tar xzvf secrets.tar.gz
+  - mv key.jks app/
   - mv google-services.json app/
   - chmod +x gradlew
   - export TZ=America/Santiago
