--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 18
-        versionName "1.3.0-beta"
+        versionName "1.2.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -83,7 +83,7 @@ dependencies {
 
     //Googleplay
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
-    implementation 'com.google.android.gms:play-services-ads:17.2.0'
+    //implementation 'com.google.android.gms:play-services-ads:17.2.0'
 
     //Facebook
     implementation 'com.facebook.android:facebook-android-sdk:4.40.0'
