--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:allowBackup="true"
-        android:fullBackupContent="@xml/backup_descriptor"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher_chile"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
@@ -18,18 +17,91 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <activity
+            android:name=".views.MainActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <!-- Activity detalle -->
+        <activity
+            android:name=".views.QuakeDetailsActivity"
+            android:parentActivityName=".views.MainActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.MainActivity" />
+        </activity>
+
+        <activity
+            android:name=".SettingsActivity"
+            android:parentActivityName=".views.MainActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.MainActivity" />
+        </activity>
+
+        <!-- Activity Contact -->
+        <activity
+            android:name=".views.ContactActivity"
+            android:parentActivityName=".views.MainActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.MainActivity" />
+        </activity>
+        <activity
+            android:name=".views.WelcomeActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
+            <tools:validation testUrl="https://figonzal.cl/lastquakechile/" />
+            <tools:validation testUrl="https://figonzal.cl/lastquakechile" />
+            <tools:validation testUrl="https://lastquakechile-server-dev.herokuapp.com/lastquakechile/" />
+            <tools:validation testUrl="https://lastquakechile-server-dev.herokuapp.com/lastquakechile" />
+
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="lastquakechile-server-dev.herokuapp.com"
+                    android:pathPattern="/lastquakechile.*"
+                    android:scheme="https" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="figonzal.cl"
+                    android:pathPattern="/lastquakechile.*"
+                    android:scheme="https" />
+            </intent-filter>
+        </activity>
+
+        <!-- TODO: Habilitar para produccion -->
+        <meta-data
+            android:name="firebase_performance_collection_enabled"
+            android:value="false" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_api_key" />
-
-        <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
-        <!--<meta-data
-            android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544~3347511713" />-->
 
         <!-- FIREBASE -->
         <!-- FCM disable auto init -->
@@ -60,76 +132,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_provider" />
         </provider>
-
-        <activity
-            android:name=".views.MainActivity"
-            android:screenOrientation="portrait">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <!-- Activity detalle -->
-        <activity
-            android:name=".views.QuakeDetailsActivity"
-            android:parentActivityName=".views.MainActivity"
-            android:screenOrientation="portrait">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".views.MainActivity" />
-        </activity>
-
-        <activity
-            android:name=".SettingsActivity"
-            android:parentActivityName=".views.MainActivity"
-            android:screenOrientation="portrait">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".views.MainActivity" />
-        </activity>
-
-        <!-- Activity Contact -->
-        <activity
-            android:name=".views.ContactActivity"
-            android:parentActivityName=".views.MainActivity"
-            android:screenOrientation="portrait">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".views.MainActivity" />
-        </activity>
-        <activity
-            android:name=".views.WelcomeActivity"
-            android:screenOrientation="portrait">
-            <tools:validation testUrl="https://figonzal.cl/lastquakechile/" />
-            <tools:validation testUrl="https://figonzal.cl/lastquakechile" />
-            <tools:validation testUrl="https://lastquakechile-server-dev.herokuapp.com/lastquakechile/" />
-            <tools:validation testUrl="https://lastquakechile-server-dev.herokuapp.com/lastquakechile" />
-
-            <intent-filter android:autoVerify="true">
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:host="lastquakechile-server-dev.herokuapp.com"
-                    android:pathPattern="/lastquakechile.*"
-                    android:scheme="https" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:host="figonzal.cl"
-                    android:pathPattern="/lastquakechile.*"
-                    android:scheme="https" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
