--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'io.fabric'
 
 android {
@@ -77,10 +78,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.1.2'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     implementation 'com.google.firebase:firebase-invites:17.0.0'
+    implementation 'com.google.firebase:firebase-ads:19.0.0'
 
     //Googleplay
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    //implementation 'com.google.android.gms:play-services-ads:17.2.0'
 
     //junit
     testImplementation 'junit:junit:4.12'
@@ -90,11 +91,8 @@ dependencies {
     //UI AUTOMATOR
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 
-
     //Espreso
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
 }
-
-apply plugin: 'com.google.gms.google-services'
