--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,9 +51,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.preference:preference:1.1.0' //Preferencias de usuario
+
+    //Material design
+    implementation 'com.google.android.material:material:1.1.0'
 
     //Cardview
     implementation 'androidx.cardview:cardview:1.0.0'
