--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
-apply plugin: 'io.fabric'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     def keystorePropertiesFile = rootProject.file("keystore.properties")
@@ -25,8 +25,8 @@ android {
         applicationId "cl.figonzal.lastquakechile"
         minSdkVersion 23
         targetSdkVersion 29
-        versionCode 21  //ultima version 18
-        versionName "1.3.1"
+        versionCode 22  //ultima version 20
+        versionName "1.3.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -49,16 +49,18 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core:1.3.0'
+    implementation 'androidx.fragment:fragment:1.2.5'
+
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.preference:preference:1.1.0' //Preferencias de usuario
+
+    implementation 'androidx.preference:preference:1.1.1' //Preferencias de usuario
 
     //Material design
     implementation 'com.google.android.material:material:1.1.0'
-
-    //Cardview
-    implementation 'androidx.cardview:cardview:1.0.0'
 
     //Volley para HTTP
     implementation 'com.android.volley:volley:1.1.1'
@@ -68,18 +70,18 @@ dependencies {
 
     //Glide para imagenes (Soporte con ANDROIDX)
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'androidx.annotation:annotation:1.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     //Viewmodel Extension
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
 
     //Firebase
-    implementation 'com.google.firebase:firebase-core:17.2.3'
-    implementation 'com.google.firebase:firebase-messaging:20.1.2'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    implementation 'com.google.firebase:firebase-core:17.4.3'
+    implementation 'com.google.firebase:firebase-messaging:20.2.1'
+    implementation 'com.google.firebase:firebase-crashlytics:17.1.0'
     implementation 'com.google.firebase:firebase-invites:17.0.0'
-    implementation 'com.google.firebase:firebase-ads:19.0.0'
+    implementation 'com.google.firebase:firebase-ads:19.2.0'
 
     //Googleplay
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
