--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
         google()
         jcenter()
@@ -11,7 +11,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.android.tools.build:gradle:4.0.0'
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -21,8 +21,8 @@ buildscript {
         // Check for v3.1.2 or higher
         classpath 'com.google.gms:google-services:4.3.3'
 
-        // Add dependency
-        classpath 'io.fabric.tools:gradle:1.31.2'
+        // Add the Crashlytics Gradle plugin.
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.2.0'
     }
 }
 
